deps/crates/vendor/tracing-attributes/tests/ui/fail/const_instrument.rs
#![allow(unreachable_code)]

#[tracing::instrument]
const fn unit() {
    ""
}

fn main() {}
