deps/crates/vendor/tracing-attributes/tests/ui/fail/const_instrument.stderr
error: macros that expand to items must be delimited with braces or followed by a semicolon
 --> tests/ui/fail/const_instrument.rs:3:1
  |
3 | #[tracing::instrument]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `tracing::instrument` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the `#[instrument]` attribute may not be used with `const fn`s
 --> tests/ui/fail/const_instrument.rs:3:1
  |
3 | #[tracing::instrument]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `tracing::instrument` (in Nightly builds, run with -Z macro-backtrace for more info)
